[gd_scene load_steps=14 format=2]

[ext_resource path="res://bullet/flying_yellow.gd" type="Script" id=1]
[ext_resource path="res://gigi v2/yellow/Y-angry-1.png" type="Texture2D" id=2]
[ext_resource path="res://gigi v2/yellow/05-destroyed/Y-destroyed-1.png" type="Texture2D" id=3]
[ext_resource path="res://gigi v2/yellow/05-destroyed/Y-destroyed-3.png" type="Texture2D" id=4]
[ext_resource path="res://gigi v2/yellow/01-moving/Y-normal-1.png" type="Texture2D" id=5]
[ext_resource path="res://gigi v2/yellow/01-moving/Y-angry-2.png" type="Texture2D" id=6]
[ext_resource path="res://gigi v2/yellow/01-moving/Y-normal-2.png" type="Texture2D" id=7]
[ext_resource path="res://gigi v2/yellow/05-destroyed/Y-destroyed-2.png" type="Texture2D" id=8]
[ext_resource path="res://gigi v2/yellow/05-destroyed/Y-destroyed-4.png" type="Texture2D" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "destroyed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 17.2727

[sub_resource type="Animation" id=4]
resource_name = "fly"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 1000, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.5, 1 )
}

[node name="fryingyellow" type="Node2D"]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 0, 244.365 )
frames = SubResource( 1 )
animation = "idle"

[node name="collision" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 3
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/collision"]
position = Vector2( -21.1654, 23.811 )
scale = Vector2( 28.326, 41.1672 )
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="vision" type="Area2D" parent="AnimatedSprite2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 3
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/vision"]
scale = Vector2( -117.204, 113.074 )
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 4 )

[connection signal="area_entered" from="AnimatedSprite2D/collision" to="." method="_on_collision_area_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/collision" to="." method="_on_collision_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/vision" to="." method="_on_vision_body_entered"]
